<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.android.victorbaena.layoutstest.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.16"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/text_type_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_here" />

        <EditText
            android:id="@+id/edit_text_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_type_here"
            android:layout_marginTop="12dp"

            android:text="Test" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_box"
            android:layout_centerHorizontal="true"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/edit_text_box"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/edit_text_box"
            android:text="@string/button_ok" />

    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_one"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_one"
                android:textSize="18dp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button_two"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_two"
                android:textSize="18dp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button_three"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_three"
                android:textSize="18dp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_four"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_four"
                android:textSize="18dp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button_five"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_five"
                android:textSize="18dp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button_six"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_six"
                android:textSize="18dp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_seven"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_seven"
                android:textSize="18dp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button_eight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_eight"
                android:textSize="18dp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button_nine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/button_nine"
                android:textSize="18dp"
                android:textStyle="bold|italic" />
        </TableRow>

    </TableLayout>
</LinearLayout>
